--- a/OnlineTaxi.Site/Views/Shared/_AccountLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AccountLayout.cshtml
@@ -4,9 +4,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.css">
+    <script src="~/lib/jquery/jquery.js"></script>
+    <script src="~/lib/twitter-bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-    <div>
+    <div class="container col-lg-6 offset-3">
         @RenderBody()
     </div>
 </body>
