--- a/OnlineTaxi.Site/Views/Color/Create.cshtml
+++ b/OnlineTaxi.Site/Views/Color/Create.cshtml
@@ -1,18 +1,26 @@
-﻿@model Database.Domain.ViewModels.Car.NewCarViewModel
+﻿@model Database.Domain.ViewModels.Color.NewColorViewModel
+
 @{
-    ViewBag.Title = "ایجاد ماشین";
+    ViewBag.Title = "مدریت رنگ ها";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 
 <form asp-action="Create" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <div>
-            <label asp-for="Name">نام</label>
+            <label asp-for="Name">نام رنگ</label>
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div>
+            <label asp-for="Code">کد رنگ</label>
+            <input asp-for="Code" class="form-control" />
+            <span asp-validation-for="Code" class="text-danger"></span>
         </div>
     </div>
     <button type="submit" class="btn btn-primary">ذخیره</button>
     <a asp-action="Index" class="btn btn-danger">بازگشت</a>
+
 </form>
