--- a/OnlineTaxi.Site/Views/Color/Index.cshtml
+++ b/OnlineTaxi.Site/Views/Color/Index.cshtml
@@ -1,25 +1,29 @@
-﻿@model Database.Domain.ViewModels.Car.CarsViewModel
+﻿@model Database.Domain.ViewModels.Color.ColorsViewModel
 @{
-    ViewBag.Title = "مدیریت ماشین";
+    ViewBag.Title = "مدیریت رنگ ها";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h3>لیست ماشین ها</h3>
+<h3>لیست رنگ ها</h3>
 
 <table class="table table-dark">
     <thead>
         <tr>
             <th>نام ماشین</th>
+            <th>کد رنگ</th>
             <th>عملیات</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.CarsInfo)
+        @foreach (var item in Model.ColorsInfo)
         {
             <tr>
                 <td>
                     @item.Name
                     <input asp-for="@item.Id" type="hidden">
+                </td>
+                <td>
+                    @item.Code
                 </td>
                 <td>
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
@@ -40,7 +44,7 @@
         }
     </tbody>
 </table>
-<a asp-action="Create" asp-controller="car" class="btn btn-success">
+<a asp-action="Create" asp-controller="Color" class="btn btn-success">
     جدید
 </a>
 
