--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="#">Aghil-WebPanel</a>
+        <a class="navbar-brand" href="#">AdminPanel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,6 +22,9 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" asp-action="Index" asp-controller="Car">مدیریت ماشین</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-action="Index" asp-controller="Color">مدیریت رنگ</a>
                 </li>
 
                 @*<li class="nav-item dropdown">
