Create Setting table and TotalInformation action

--- a/OnlineTaxi.Site/Views/Admin/Index.cshtml
+++ b/OnlineTaxi.Site/Views/Admin/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Admin";
+    ViewBag.Title = "مدیریت";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 
-<h3>Welcome to Admin panel  </h3>
+<h3 class="align-content-center">پنل مدیریت</h3>
 
