--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="#">AdminPanel</a>
+        <a class="navbar-brand" href="#">تاکسی آنلاین-پنل مدیریت</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,15 +27,14 @@
                     <a class="nav-link" asp-action="Index" asp-controller="Color">مدیریت رنگ</a>
                 </li>
 
-                @*<li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    University
+                        مدیریت تنظیمات
                     </a>
                     <div class="dropdown-menu">
-                    <a class="dropdown-item" asp-action="Index" asp-controller="Student">Students</a>
-                    <a class="dropdown-item" asp-action="Index" asp-controller="Course">Courses</a>
+                        <a class="dropdown-item" asp-action="TotalInformation" asp-controller="AppSetting">تنظیمات کلی</a>
                     </div>
-                    </li>*@
+                </li>
             </ul>
 
         </div>
