--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -33,6 +33,7 @@
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" asp-action="TotalInformation" asp-controller="AppSetting">تنظیمات کلی</a>
+                        <a class="dropdown-item" asp-action="AboutUs" asp-controller="AppSetting">درباره ما</a>
                     </div>
                 </li>
             </ul>
