--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -34,6 +34,7 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" asp-action="TotalInformation" asp-controller="AppSetting">تنظیمات کلی</a>
                         <a class="dropdown-item" asp-action="AboutUs" asp-controller="AppSetting">درباره ما</a>
+                        <a class="dropdown-item" asp-action="Terms" asp-controller="AppSetting">قوانین</a>
                     </div>
                 </li>
             </ul>
