--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
 
     <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/fonts.css" />
     <script src="~/lib/jquery/jquery.slim.min.js"></script>
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -35,6 +36,7 @@
                         <a class="dropdown-item" asp-action="TotalInformation" asp-controller="AppSetting">تنظیمات کلی</a>
                         <a class="dropdown-item" asp-action="AboutUs" asp-controller="AppSetting">درباره ما</a>
                         <a class="dropdown-item" asp-action="Terms" asp-controller="AppSetting">قوانین</a>
+                        <a class="nav-link" asp-action="Index" asp-controller="RateType">مدیریت امتیاز بندی</a>
                     </div>
                 </li>
             </ul>
