--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -36,7 +36,7 @@
                         <a class="dropdown-item" asp-action="TotalInformation" asp-controller="AppSetting">تنظیمات کلی</a>
                         <a class="dropdown-item" asp-action="AboutUs" asp-controller="AppSetting">درباره ما</a>
                         <a class="dropdown-item" asp-action="Terms" asp-controller="AppSetting">قوانین</a>
-                        <a class="nav-link" asp-action="Index" asp-controller="RateType">مدیریت امتیاز بندی</a>
+                        <a class="dropdown-item" asp-action="Index" asp-controller="RateType">مدیریت امتیاز بندی</a>
                     </div>
                 </li>
             </ul>
