--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -28,6 +28,10 @@
                     <a class="nav-link" asp-action="Index" asp-controller="Color">مدیریت رنگ</a>
                 </li>
 
+                <li>
+                    <a class="nav-link" asp-action="Index" asp-controller="RateType">مدیریت امتیاز بندی</a>
+                </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                         مدیریت تنظیمات
@@ -36,7 +40,6 @@
                         <a class="dropdown-item" asp-action="TotalInformation" asp-controller="AppSetting">تنظیمات کلی</a>
                         <a class="dropdown-item" asp-action="AboutUs" asp-controller="AppSetting">درباره ما</a>
                         <a class="dropdown-item" asp-action="Terms" asp-controller="AppSetting">قوانین</a>
-                        <a class="dropdown-item" asp-action="Index" asp-controller="RateType">مدیریت امتیاز بندی</a>
                     </div>
                 </li>
             </ul>
