Create EmailSetting CRUD Controller And Actions

--- a/OnlineTaxi.Site/Views/RateType/Create.cshtml
+++ b/OnlineTaxi.Site/Views/RateType/Create.cshtml
@@ -14,7 +14,7 @@
         </div>
         <div>
             <label asp-for="Ok">نوع نظر</label>
-            <input asp-for="Ok" type="checkbox" class="form-control" />
+            <input asp-for="Ok" type="checkbox" />
             <span asp-validation-for="Ok" class="text-danger"></span>
         </div>
         <div>
