--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -32,6 +32,10 @@
                     <a class="nav-link" asp-action="Index" asp-controller="RateType">مدیریت امتیاز بندی</a>
                 </li>
 
+                <li>
+                    <a class="nav-link" asp-action="Index" asp-controller="EmailSetting">مدیریت ایمیل ها</a>
+                </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                         مدیریت تنظیمات
