--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -44,6 +44,7 @@
                         <a class="dropdown-item" asp-action="TotalInformation" asp-controller="AppSetting">تنظیمات کلی</a>
                         <a class="dropdown-item" asp-action="AboutUs" asp-controller="AppSetting">درباره ما</a>
                         <a class="dropdown-item" asp-action="Terms" asp-controller="AppSetting">قوانین</a>
+                        <a class="dropdown-item" asp-action="PriceSetting" asp-controller="AppSetting">تنطیمات قیمت</a>
                     </div>
                 </li>
             </ul>
