Create Humidity Page

--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -43,6 +43,8 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" asp-action="Index" asp-controller="PriceType">تاثیر آب و هوا و مسافت</a>
                         <a class="dropdown-item" asp-action="Index" asp-controller="MonthlyType">تعرفه های ماهانه</a>
+                        <a class="dropdown-item" asp-action="Index" asp-controller="Humidity">تعرفه های رطوبت</a>
+
                     </div>
                 </li>
 
