--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -44,7 +44,7 @@
                         <a class="dropdown-item" asp-action="Index" asp-controller="PriceType">تاثیر آب و هوا و مسافت</a>
                         <a class="dropdown-item" asp-action="Index" asp-controller="MonthlyType">تعرفه های ماهانه</a>
                         <a class="dropdown-item" asp-action="Index" asp-controller="Humidity">تعرفه های رطوبت</a>
-
+                        <a class="dropdown-item" asp-action="Index" asp-controller="Temperature">تعرفه های دما</a>
                     </div>
                 </li>
 
