--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -36,6 +36,10 @@
                     <a class="nav-link" asp-action="Index" asp-controller="EmailSetting">مدیریت ایمیل ها</a>
                 </li>
 
+                <li>
+                    <a class="nav-link" asp-action="Index" asp-controller="Role">مدیریت نقش ها</a>
+                </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                         مدیریت تعرفه ها
