--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fontSarbaz">
         <a class="navbar-brand" href="#">تاکسی آنلاین-پنل مدیریت</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container fontIranYekan">
         @RenderBody()
     </div>
 </body>
