--- a/OnlineTaxi.Site/wwwroot/css/fonts.css
+++ b/OnlineTaxi.Site/wwwroot/css/fonts.css
@@ -3,6 +3,20 @@
     src: url('../fonts/Sarbaz.ttf');
 }
 
-* {
+@font-face {
+    font-family: BYekan;
+    src: url('../fonts/Yekan.ttf')
+}
+
+@font-face {
+    font-family: IranYekan;
+    src: url('../fonts/iranyekanwebbold.woff2')
+}
+
+.fontIranYekan {
+    font-family: IranYekan;
+}
+
+.fontSarbaz {
     font-family: Sarbaz;
 }
