--- a/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
+++ b/OnlineTaxi.Site/Views/Shared/_AdminLayout.cshtml
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fontSarbaz">
-        <a class="navbar-brand" href="#">تاکسی آنلاین-پنل مدیریت</a>
+        <a class="navbar-brand" asp-action="Index" asp-controller="Admin">تاکسی آنلاین-پنل مدیریت</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
