--- a/OnlineTaxi.Site/Views/Test/Index.cshtml
+++ b/OnlineTaxi.Site/Views/Test/Index.cshtml
@@ -1,14 +1,34 @@
-﻿@using Database.Domain.Entities
-@model List<UserDomain>
-
-@{
+﻿@{
     ViewBag.Title = "Test";
 }
 
-@if (Model.Count != 0)
-{
-    foreach (var item in Model)
-    {
-        <h4>Name : @item.Username</h4>
-    }
-}
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+          crossorigin="anonymous" integrity="sha256-eS<snip>BE=" />
+    <meta name="x-stylesheet-fallback-test" content="" class="sr-only" />
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+    <link rel="stylesheet" href="~/css/map.css" />
+    
+
+</head>
+<body class="container-fluid">
+    <div class="text-center mapButtons">
+        <input type="button" class="btn btn-success" onclick="getDistanceFromLatLonInKm(firstlatlng.lat,firstlatlng.lng,secondlatlng.lat,secondlatlng.lng)" value="محاسبه مسافت" />
+        <input type="button" class="btn btn-primary" onclick="clearMarkers()" value="پاک کردن" />
+    </div>
+    <div>
+        <div class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-8 offset-sm-2 mainMap" id="map"></div>
+    </div>
+</body>
+</html>
+
+<script src="~/js/map.js"></script>
+
+
+
