--- a/OnlineTaxi.Site/Views/Test/Index.cshtml
+++ b/OnlineTaxi.Site/Views/Test/Index.cshtml
@@ -14,13 +14,39 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
     <link rel="stylesheet" href="~/css/map.css" />
-    
+    <link rel="stylesheet" href="~/fontawesome/css/all.css" />
+
+    <style>
+
+
+        a:hover {
+            text-decoration: none;
+            opacity: 1;
+        }
+
+        .buttonBar {
+            font-size: x-large;
+        }
+
+        .buttonBarLinks {
+            padding-right: 5%;
+            opacity: 0.8;
+        }
+    </style>
 
 </head>
 <body class="container-fluid">
-    <div class="text-center mapButtons">
-        <input type="button" class="btn btn-success" onclick="getDistanceFromLatLonInKm(firstlatlng.lat,firstlatlng.lng,secondlatlng.lat,secondlatlng.lng)" value="محاسبه مسافت" />
-        <input type="button" class="btn btn-primary" onclick="clearMarkers()" value="پاک کردن" />
+
+    <div class="text-center mapButtons buttonBar">
+        <a href="#" class="buttonBarLinks">
+            <span class="fa-solid fa-calculator" onclick="getDistanceFromLatLonInKm(firstlatlng.lat,firstlatlng.lng,secondlatlng.lat,secondlatlng.lng)"></span>
+        </a>
+        <a href="#" class="buttonBarLinks">
+            <span class="fa-regular fa-trash-can" onclick="clearMarkers()"></span>
+        </a>
+        <a href="#" class="buttonBarLinks">
+            <span class="fa-solid fa-circle-chevron-left" onclick="clearLastMarker()"></span>
+        </a>
     </div>
     <div>
         <div class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-8 offset-sm-2 mainMap" id="map"></div>
